--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Investastic</title>
+        <link rel="icon" href="./assets/icon/logo.svg">
         <link rel="stylesheet" href="assets/style.css">
     </head>
     <body>
@@ -17,7 +19,7 @@
                         <li><button><a href="mailto:gfriendredebut@gmail.com"><h2>Mulai Startupmu</h2></a></button></li>
                     </ul>
                     <ul id="profil">
-                        <li><img src="/assets/img/pp.png" alt="photo profile" class="photo-profile"></li>
+                        <li><img src="assets/img/pp.png" alt="photo profile" class="photo-profile"></li>
                         <li><a href="/html/maintenance.html"><h2>Budi</h2></a></li>
                     </ul>
                 </nav>
