--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Investastic</title>
         <link rel="icon" href="./assets/icon/logo.svg">
-        <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
         <div class="container">
             <div class="navbar">
-                <img src="/assets/icon/icon-park_hamburger-button.svg" alt="menu" class="icon-menu">
+                <img src="./assets/icon/icon-park_hamburger-button.svg" alt="menu" class="icon-menu">
                 <h1>Investastic</h1>
                 <nav>
                     <ul id="navrail">
-                        <li><a href="/html/maintenance.html"><h2>Tentang Kami</h2></a></li>
+                        <li><a href="./html/maintenance.html"><h2>Tentang Kami</h2></a></li>
                         <li><a href=""><h2>Investasi</h2></a></li>
                         <li><button><a href="mailto:gfriendredebut@gmail.com"><h2>Mulai Startupmu</h2></a></button></li>
                     </ul>
                     <ul id="profil">
-                        <li><img src="assets/img/pp.png" alt="photo profile" class="photo-profile"></li>
-                        <li><a href="/html/maintenance.html"><h2>Budi</h2></a></li>
+                        <li><img src="./assets/img/pp.png" alt="photo profile" class="photo-profile"></li>
+                        <li><a href="./html/maintenance.html"><h2>Budi</h2></a></li>
                     </ul>
                 </nav>
             </div>
@@ -32,20 +32,20 @@
                     <button><a href="mailto:gfriendredebut@gmail.com"><h2>Mulai Startupmu</h2></a></button>
                 </div>
                 <div class="column2">
-                    <img src="/assets/img/illustration.png" alt="startup illustration" class="hero-img">
+                    <img src="./assets/img/illustration.png" alt="startup illustration" class="hero-img">
                 </div>
             </div>
             
             <div class="row2">
                 <h2>Bagaimana Prosesnya ?</h2>
-                <img src="/assets/img/Progress.png" alt="how we works" class="progress">
+                <img src="./assets/img/Progress.png" alt="how we works" class="progress">
             </div>
         </div>
         <div class="footer">
             <p>Copyright © 2022</p>
             <ul>
                 <li><a href="">Instagram </a><span><p> | </p></span><a href="mailto:gfriendredebut@gmail.com"> Email</a></li>
-                <li><a href="/html/maintenance.html">Syarat dan Ketentuan </a><span><p> | </p></span><a href="/html/maintenance.html"> Kebijakan Privasi</a></li>
+                <li><a href="./html/maintenance.html">Syarat dan Ketentuan </a><span><p> | </p></span><a href="./html/maintenance.html"> Kebijakan Privasi</a></li>
             </ul>
         </div>
     </body>
