--- a/html/maintenance.html
+++ b/html/maintenance.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Maaf</title>
-        <link rel="icon" href="../assets/icon/logo.svg">
-        <link rel="stylesheet" href="../assets/style.css">
+        <link rel="icon" href="./assets/icon/logo.svg">
+        <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
         <div class="container">
             <div class="navbar">
-                <img src="../assets/icon/icon-park_hamburger-button.svg" alt="menu" class="icon-menu">
+                <img src="./assets/icon/icon-park_hamburger-button.svg" alt="menu" class="icon-menu">
                 <h1>Investastic</h1>
                 <nav>
                     <ul id="navrail">
@@ -19,7 +19,7 @@
                         <li><button><a href="mailto:gfriendredebut@gmail.com"><h2>Mulai Startupmu</h2></a></button></li>
                     </ul>
                     <ul id="profil">
-                        <li><img src="../assets/img/pp.png" alt="photo profile" class="photo-profile"></li>
+                        <li><img src="./assets/img/pp.png" alt="photo profile" class="photo-profile"></li>
                         <li><a href=""><h2>Budi</h2></a></li>
                     </ul>
                 </nav>
@@ -27,10 +27,10 @@
             <div class="row1">
                 <div class="column1">
                     <h1>Maaf, Website sedang dalam tahap pengembangan</h1>
-                    <button><a href="../index.html"><h2>Kembali ke Halaman Utama</h2></a></button>
+                    <button><a href="./index.html"><h2>Kembali ke Halaman Utama</h2></a></button>
                 </div>
                 <div class="column2">
-                    <img src="../assets/img/illustration 2.png" alt="startup illustration" class="hero-img">
+                    <img src="./assets/img/illustration 2.png" alt="startup illustration" class="hero-img">
                 </div>
             </div>
         </div>
