--- a/html/maintenance.html
+++ b/html/maintenance.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Maaf</title>
-        <link rel="icon" href="/assets/icon/logo.svg">
+        <link rel="icon" href="../assets/icon/logo.svg">
         <link rel="stylesheet" href="/assets/style.css">
     </head>
     <body>
