--- a/html/maintenance.html
+++ b/html/maintenance.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Maaf</title>
         <link rel="icon" href="../assets/icon/logo.svg">
-        <link rel="stylesheet" href="/assets/style.css">
+        <link rel="stylesheet" href="../assets/style.css">
     </head>
     <body>
         <div class="container">
