--- a/html/meetingdetail.html
+++ b/html/meetingdetail.html
@@ -16,7 +16,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/m-detail-payment.css" />
+    <link rel="stylesheet" href="../assets/m-detail-payment.css" />
     <style>
       .container-item {
         height: min-content;
@@ -28,7 +28,7 @@
       <div class="container">
         <img
           class="hamburger-icon d-xl-none"
-          src="/assets/icon/icon-park_hamburger-button.svg"
+          src="../assets/icon/icon-park_hamburger-button.svg"
           alt="hamburger-icon"
         />
         <button class="navbar-button d-xl-none">
@@ -36,7 +36,7 @@
         </button>
         <div class="row align-items-center">
           <div class="col-xl-2 col-12">
-            <a href="/index.html"
+            <a href="../index.html"
             ><h1 class="title1 text-center">Investastic</h1></a
           >
           </div>
@@ -65,7 +65,7 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-8">
                 <img
-                  src="/assets/img/pp.png"
+                  src="../assets/img/pp.png"
                   alt="photo profile"
                   class="photo-profile"
                 />
@@ -88,7 +88,7 @@
           <div class="row mt-xl-3 mt-4 align-items-center">
             <div class="col-xl-1 col-2">
               <img
-                src="/assets/icon/startup-logo.png"
+                src="../assets/icon/startup-logo.png"
                 alt="startup-logo"
                 style="width: 100%"
               />
@@ -120,7 +120,7 @@
                       <div class="col-2">
                         <img
                           class="calendar"
-                          src="/assets/icon/calendar.png"
+                          src="../assets/icon/calendar.png"
                           alt=""
                         />
                       </div>
@@ -141,7 +141,7 @@
                       class="row justify-content-center align-items-center g-2"
                     >
                       <div class="col-2">
-                        <img src="/assets/icon/calendar.png" alt="" />
+                        <img src="../assets/icon/calendar.png" alt="" />
                       </div>
                       <div class="col text-start">
                         <h2>Atur Jadwal Meeting</h2>
@@ -165,7 +165,7 @@
                             <div class="col-3">
                               <img
                                 class="vc-icon"
-                                src="/assets/icon/zoom.png"
+                                src="../assets/icon/zoom.png"
                                 alt=""
                                 width="100%"
                               />
