--- a/html/meetingdetail.html
+++ b/html/meetingdetail.html
@@ -43,12 +43,12 @@
           <div class="col-xl-8 mx-4 d-xl-block d-none">
             <div class="row align-items-center g-2">
               <div class="col-4">
-                <a href="/html/maintenance.html"
+                <a href="./maintenance.html"
                   ><h2 class="navbar">Tentang Kami</h2></a
                 >
               </div>
               <div class="col-3">
-                <a href="/html/maintenance.html"
+                <a href="./maintenance.html"
                   ><h2 class="navbar">Investasi</h2></a
                 >
               </div>
@@ -71,7 +71,7 @@
                 />
               </div>
               <div class="col-4">
-                <a href="/html/maintenance.html"
+                <a href="./maintenance.html"
                   ><h2 class="navbar">Budi</h2></a
                 >
               </div>
@@ -197,27 +197,27 @@
         <div class="container-fluid">
           <div class="row justify-content-between align-items-center g-2">
             <div class="col-4 order-xl-0 order-1">
-              <a class="d-none d-sm-block" href="/html/maintenance.html"
+              <a class="d-none d-sm-block" href="./maintenance.html"
                 >Copyright®2022 Investastic</a
               >
-              <a class="d-block d-sm-none" href="/html/maintenance.html"
+              <a class="d-block d-sm-none" href="./maintenance.html"
                 >®2022 Investastic</a
               >
             </div>
             <div class="col-4 order-xl-1 order-2 text-end">
-              <a class="d-xl-block d-none text-center" href="/html/maintenance.html"
+              <a class="d-xl-block d-none text-center" href="./maintenance.html"
                 >Instagram | Email</a
               >
-              <a class="d-xl-none d-lg-block" href="/html/maintenance.html"
+              <a class="d-xl-none d-lg-block" href="./maintenance.html"
                 >Instagram<br />
                 Email</a
               >
             </div>
             <div class="col-4 order-xl-2 order-0 text-start">
-              <a class="d-none d-lg-block" href="/html/maintenance.html"
+              <a class="d-none d-lg-block" href="./maintenance.html"
                 >Syarat dan Ketentuan | Kebijakan Privasi</a
               >
-              <a class="d-lg-none" href="/html/maintenance.html">
+              <a class="d-lg-none" href="./maintenance.html">
                 Kebijakan Privasi<br />
                 Syarat dan Ketentuan
               </a>
