--- a/html/paymentpage.html
+++ b/html/paymentpage.html
@@ -16,7 +16,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/m-detail-payment.css" />
+    <link rel="stylesheet" href="../assets/m-detail-payment.css" />
     <style></style>
   </head>
   <body>
@@ -24,7 +24,7 @@
       <div class="container">
         <img
           class="hamburger-icon d-xl-none"
-          src="/assets/icon/icon-park_hamburger-button.svg"
+          src="../assets/icon/icon-park_hamburger-button.svg"
           alt="hamburger-icon"
         />
         <button class="navbar-button d-xl-none">
@@ -32,19 +32,19 @@
         </button>
         <div class="row align-items-center">
           <div class="col-xl-2 col-12">
-            <a href="/index.html"
+            <a href="../index.html"
               ><h1 class="title1 text-center">Investastic</h1></a
             >
           </div>
           <div class="col-xl-8 mx-4 d-xl-block d-none">
             <div class="row align-items-center g-2">
               <div class="col-4">
-                <a href="/html/maintenance.html"
+                <a href="./maintenance.html"
                   ><h2 class="navbar">Tentang Kami</h2></a
                 >
               </div>
               <div class="col-3">
-                <a href="/html/maintenance.html"
+                <a href="./maintenance.html"
                   ><h2 class="navbar">Investasi</h2></a
                 >
               </div>
@@ -59,13 +59,13 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-8">
                 <img
-                  src="/assets/img/pp.png"
+                  src="../assets/img/pp.png"
                   alt="photo profile"
                   class="photo-profile"
                 />
               </div>
               <div class="col-4">
-                <a href="/html/maintenance.html"
+                <a href="./maintenance.html"
                   ><h2 class="navbar">Budi</h2></a
                 >
               </div>
@@ -82,7 +82,7 @@
           <div class="row mt-xl-3 mt-4 align-items-center">
             <div class="col-xl-1 col-2">
               <img
-                src="/assets/icon/startup-logo.png"
+                src="../assets/icon/startup-logo.png"
                 alt="startup-logo"
                 style="width: 100%"
               />
@@ -123,7 +123,7 @@
                       <div class="row px-2">
                         <div class="col-md-4 col-5">
                           <img
-                            src="/assets/icon/logo_bca.png"
+                            src="../assets/icon/logo_bca.png"
                             alt="logo_bca"
                             class="pay-logo"
                           />
@@ -168,29 +168,29 @@
         <div class="container-fluid">
           <div class="row justify-content-between align-items-center g-2">
             <div class="col-4 order-xl-0 order-1">
-              <a class="d-none d-sm-block" href="/html/maintenance.html"
+              <a class="d-none d-sm-block" href="./maintenance.html"
                 >Copyright®2022 Investastic</a
               >
-              <a class="d-block d-sm-none" href="/html/maintenance.html"
+              <a class="d-block d-sm-none" href="./maintenance.html"
                 >®2022 Investastic</a
               >
             </div>
             <div class="col-4 order-xl-1 order-2 text-end">
               <a
                 class="d-xl-block d-none text-center"
-                href="/html/maintenance.html"
+                href="./maintenance.html"
                 >Instagram | Email</a
               >
-              <a class="d-xl-none d-lg-block" href="/html/maintenance.html"
+              <a class="d-xl-none d-lg-block" href="./maintenance.html"
                 >Instagram<br />
                 Email</a
               >
             </div>
             <div class="col-4 order-xl-2 order-0 text-start">
-              <a class="d-none d-lg-block" href="/html/maintenance.html"
+              <a class="d-none d-lg-block" href="./maintenance.html"
                 >Syarat dan Ketentuan | Kebijakan Privasi</a
               >
-              <a class="d-lg-none" href="/html/maintenance.html">
+              <a class="d-lg-none" href="./maintenance.html">
                 Kebijakan Privasi<br />
                 Syarat dan Ketentuan
               </a>
