--- a/html/meetingdetail.html
+++ b/html/meetingdetail.html
@@ -180,7 +180,7 @@
                     </div>
                   </div>
                   <div class="col-xl-6 col-lg-12 mt-lg-5">
-                    <button onclick="location.href='./html/paymentpage.html'" class="checkout align-items-center w-100">
+                    <button onclick="location.href='./paymentpage.html'" class="checkout align-items-center w-100">
                       <h2>MULAI INVESTASI</h2>
                     </button>
                   </div>
