--- a/html/meetingdetail.html
+++ b/html/meetingdetail.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Meeting Detail</title>
+    <link rel="icon" href="../assets/icon/logo.svg" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -31,14 +32,17 @@
           src="../assets/icon/icon-park_hamburger-button.svg"
           alt="hamburger-icon"
         />
-        <button class="navbar-button d-xl-none">
+        <button
+          onclick="location.href ='mailto:alvinkamalnasich@gmail.com'"
+          class="navbar-button d-xl-none"
+        >
           <h2 class="navbar">Mulai Startupmu</h2>
         </button>
         <div class="row align-items-center">
           <div class="col-xl-2 col-12">
             <a href="../index.html"
-            ><h1 class="title1 text-center">Investastic</h1></a
-          >
+              ><h1 class="title1 text-center">Investastic</h1></a
+            >
           </div>
           <div class="col-xl-8 mx-4 d-xl-block d-none">
             <div class="row align-items-center g-2">
@@ -71,9 +75,7 @@
                 />
               </div>
               <div class="col-4">
-                <a href="./maintenance.html"
-                  ><h2 class="navbar">Budi</h2></a
-                >
+                <a href="./maintenance.html"><h2 class="navbar">Budi</h2></a>
               </div>
             </div>
           </div>
@@ -180,7 +182,10 @@
                     </div>
                   </div>
                   <div class="col-xl-6 col-lg-12 mt-lg-5">
-                    <button onclick="location.href='./paymentpage.html'" class="checkout align-items-center w-100">
+                    <button
+                      onclick="location.href='./paymentpage.html'"
+                      class="checkout align-items-center w-100"
+                    >
                       <h2>MULAI INVESTASI</h2>
                     </button>
                   </div>
@@ -205,10 +210,14 @@
               >
             </div>
             <div class="col-4 order-xl-1 order-2 text-end">
-              <a class="d-xl-block d-none text-center" href="./maintenance.html"
+              <a
+                class="d-xl-block d-none text-center"
+                href="mailto:alvinkamalnasich@gmail.com"
                 >Instagram | Email</a
               >
-              <a class="d-xl-none d-lg-block" href="./maintenance.html"
+              <a
+                class="d-xl-none d-lg-block"
+                href="mailto:alvinkamalnasich@gmail.com"
                 >Instagram<br />
                 Email</a
               >
