--- a/html/paymentpage.html
+++ b/html/paymentpage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Payment</title>
+    <link rel="icon" href="../assets/icon/logo.svg" />
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -27,7 +28,10 @@
           src="../assets/icon/icon-park_hamburger-button.svg"
           alt="hamburger-icon"
         />
-        <button class="navbar-button d-xl-none">
+        <button
+          onclick="location.href ='mailto:alvinkamalnasich@gmail.com'"
+          class="navbar-button d-xl-none"
+        >
           <h2 class="navbar">Mulai Startupmu</h2>
         </button>
         <div class="row align-items-center">
@@ -49,7 +53,10 @@
                 >
               </div>
               <div class="col-5">
-                <button class="navbar-button">
+                <button
+                  onclick="location.href ='mailto:alvinkamalnasich@gmail.com'"
+                  class="navbar-button"
+                >
                   <h2 class="navbar">Mulai Startupmu</h2>
                 </button>
               </div>
@@ -65,9 +72,7 @@
                 />
               </div>
               <div class="col-4">
-                <a href="./maintenance.html"
-                  ><h2 class="navbar">Budi</h2></a
-                >
+                <a href="./maintenance.html"><h2 class="navbar">Budi</h2></a>
               </div>
             </div>
           </div>
@@ -178,10 +183,12 @@
             <div class="col-4 order-xl-1 order-2 text-end">
               <a
                 class="d-xl-block d-none text-center"
-                href="./maintenance.html"
+                href="mailto:alvinkamalnasich@gmail.com"
                 >Instagram | Email</a
               >
-              <a class="d-xl-none d-lg-block" href="./maintenance.html"
+              <a
+                class="d-xl-none d-lg-block"
+                href="mailto:alvinkamalnasich@gmail.com"
                 >Instagram<br />
                 Email</a
               >
