--- a/html/maintenance.html
+++ b/html/maintenance.html
@@ -14,7 +14,7 @@
                 <h1>Investastic</h1>
                 <nav>
                     <ul id="navrail">
-                        <li><a href=""><h2>Tentang Kami</h2></a></li>
+                        <li><a href="../html/list-startup.html"><h2>Tentang Kami</h2></a></li>
                         <li><a href=""><h2>Investasi</h2></a></li>
                         <li><button><a href="mailto:gfriendredebut@gmail.com"><h2>Mulai Startupmu</h2></a></button></li>
                     </ul>
