--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul id="navrail">
                         <li><a href="./html/maintenance.html"><h2>Tentang Kami</h2></a></li>
-                        <li><a href=""><h2>Investasi</h2></a></li>
+                        <li><a href="./html/list-startup.html"><h2>Investasi</h2></a></li>
                         <li><button><a href="mailto:gfriendredebut@gmail.com"><h2>Mulai Startupmu</h2></a></button></li>
                     </ul>
                     <ul id="profil">
