--- a/html/list-startup.html
+++ b/html/list-startup.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <title>Investastic</title>
         <link rel="icon" href="../assets/icon/logo.svg">
-        <link rel="stylesheet" href="./assets/style.css">
+        <link rel="stylesheet" href="../assets/styleGading.css">
     </head>
     <body>
         <div class class="container">
