--- a/html/list-startup.html
+++ b/html/list-startup.html
@@ -65,34 +65,34 @@
                 <div class="column2">
                     <button class="button1">
                         <a href="">
-                            <img src="assets/img/v318_2959.png"><h3>PT Mencari Cinta Sejati</h3>
+                            <img src="../assets/imgGading/v318_2959.png"><h3>PT Mencari Cinta Sejati</h3>
                             <h5>Seed</h5><h5>Kuliner</h5>
-                            <img src="assets/img/pepicons_rewind-time.svg"><h4>6 tahun</h4>
-                            <img src="assets/img/octicon_graph-24.svg"><h4>36%</h4>
+                            <img src="../assets/imgGading/pepicons_rewind-time.svg"><h4>6 tahun</h4>
+                            <img src="../assets/imgGading/octicon_graph-24.svg"><h4>36%</h4>
                         </a>
                     </button>
                     <button class="button1">
                         <a href="">
-                            <img src="assets/img/v318_2994.png"><h3>PT Mencari Pasien Sejati</h3>
+                            <img src="../assets/imgGading/v318_2994.png"><h3>PT Mencari Pasien Sejati</h3>
                             <h5>Seed</h5><h5>Kuliner</h5>
-                            <img src="assets/img/pepicons_rewind-time.svg"><h4>7 tahun</h4>
-                            <img src="assets/img/octicon_graph-24.svg"><h4>41%</h4>
+                            <img src="../assets/imgGading/pepicons_rewind-time.svg"><h4>7 tahun</h4>
+                            <img src="../assets/imgGading/octicon_graph-24.svg"><h4>41%</h4>
                         </a>
                     </button>
                     <button class="button1">
                         <a href="">
-                            <img src="assets/img/v318_3042.png"><h3>PT Mencari Murid Sejati</h3>
+                            <img src="../assets/imgGading/v318_3042.png"><h3>PT Mencari Murid Sejati</h3>
                             <h5>Seed</h5><h5>Kuliner</h5>
-                            <img src="assets/img/pepicons_rewind-time.svg"><h4>4 tahun</h4>
-                            <img src="assets/img/octicon_graph-24.svg"><h4>22%</h4>
+                            <img src="../assets/imgGading/pepicons_rewind-time.svg"><h4>4 tahun</h4>
+                            <img src="../assets/imgGading/octicon_graph-24.svg"><h4>22%</h4>
                         </a>
                     </button>
                     <button class="button1">
                         <a href="">
-                            <img src="assets/img/v318_3043.png"><h3>Samsan Tech</h3>
+                            <img src="../assets/imgGading/v318_3043.png"><h3>Samsan Tech</h3>
                             <h5>Seed</h5><h5>Kuliner</h5>
-                            <img src="assets/img/pepicons_rewind-time.svg"><h4>6 tahun</h4>
-                            <img src="assets/img/octicon_graph-24.svg"><h4>36%</h4>
+                            <img src="../assets/imgGading/pepicons_rewind-time.svg"><h4>6 tahun</h4>
+                            <img src="../assets/imgGading/octicon_graph-24.svg"><h4>36%</h4>
                         </a>
                     </button>
                 </div>
