--- a/html/detailStartup.html
+++ b/html/detailStartup.html
@@ -42,11 +42,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="../assets/styleMilla.css" />
   </head>
   <body>
     <div>
-      <link href="./detail-startup.css" rel="stylesheet" />
+      <link href="../assets/detail-startup.css" rel="stylesheet" />
 
       <div class="detail-startup-container">
         <div class="detail-startup-hafidz-dekstop-detail-startup">
@@ -122,7 +122,7 @@
                 </span>
                 <img
                   alt="icroundfiledownload8916"
-                  src="public/playground_assets/icroundfiledownload8916-506tl.svg"
+                  src="../assets/public/playground_assets/icroundfiledownload8916-506tl.svg"
                   class="detail-startup-icroundfiledownload"
                 />
               </div>
@@ -132,7 +132,7 @@
             <div class="detail-startup-container4">
               <img
                 alt="materialsymbolsautoscheduleoutlinerounded8916"
-                src="public/playground_assets/materialsymbolsautoscheduleoutlinerounded8916-jrf.svg"
+                src="../assets/public/playground_assets/materialsymbolsautoscheduleoutlinerounded8916-jrf.svg"
                 class="detail-startup-materialsymbolsautoscheduleoutlinerounded"
               />
               <div class="detail-startup-group29">
@@ -143,7 +143,7 @@
           <div class="detail-startup-group7">
             <img
               alt="Ellipse68916"
-              src="public/playground_assets/ellipse68916-d9ka-200h.png"
+              src="../assets/public/playground_assets/ellipse68916-d9ka-200h.png"
               class="detail-startup-ellipse6"
             />
             <span class="detail-startup-text21"><span>Budi</span></span>
@@ -161,7 +161,7 @@
             </div>
             <img
               alt="Line6I891"
-              src="public/playground_assets/line6i891-0og.svg"
+              src="../assets/public/playground_assets/line6i891-0og.svg"
               class="detail-startup-line6"
             />
           </div>
@@ -169,7 +169,7 @@
             <div class="detail-startup-container5">
               <img
                 alt="materialsymbolsmarkchatunreadoutline8917"
-                src="public/playground_assets/materialsymbolsmarkchatunreadoutline8917-g402.svg"
+                src="../assets/public/playground_assets/materialsymbolsmarkchatunreadoutline8917-g402.svg"
                 class="detail-startup-materialsymbolsmarkchatunreadoutline"
               />
               <div class="detail-startup-group291">
@@ -183,7 +183,7 @@
           <div class="detail-startup-footer">
             <img
               alt="Rectangle13I891"
-              src="public/playground_assets/rectangle13i891-7cw8-200h.png"
+              src="../assets/public/playground_assets/rectangle13i891-7cw8-200h.png"
               class="detail-startup-rectangle13"
             />
             <div class="detail-startup-group6">
@@ -204,27 +204,27 @@
           </div>
           <img
             alt="image"
-            src="public/playground_assets/header-1500h.png"
+            src="../assets/public/playground_assets/header-1500h.png"
             class="detail-startup-image"
           />
           <img
             alt="image"
-            src="public/playground_assets/ipad-1400h.png"
+            src="../assets/public/playground_assets/ipad-1400h.png"
             class="detail-startup-image1"
           />
           <img
             alt="line"
-            src="public/playground_assets/line%2013-1400h.png"
+            src="../assets/public/playground_assets/line%2013-1400h.png"
             class="detail-startup-image2"
           />
           <img
             alt="image"
-            src="public/playground_assets/header2-1400h.png"
+            src="../assets/public/playground_assets/header2-1400h.png"
             class="detail-startup-image3"
           />
           <img
             alt="image"
-            src="public/playground_assets/iphone%2013%20%26%2013%20pro-1400h.png"
+            src="../assets/public/playground_assets/iphone%2013%20%26%2013%20pro-1400h.png"
             class="detail-startup-image4"
           />
         </div>
