--- a/html/list-startup.html
+++ b/html/list-startup.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="column2">
                     <button class="button1">
-                        <a href="">
+                        <a href="../html/detailStartup">
                             <img src="../assets/imgGading/v318_2959.png"><h3>PT Mencari Cinta Sejati</h3>
                             <h5>Seed</h5><h5>Kuliner</h5>
                             <img src="../assets/imgGading/pepicons_rewind-time.svg"><h4>6 tahun</h4>
