--- a/html/detailStartup.html
+++ b/html/detailStartup.html
@@ -128,7 +128,7 @@
               </div>
             </div>
           </div>
-          <div class="detail-startup-group101 button">
+          <div class="detail-startup-group101 button"> <a href="../html/meetingdetail.html">
             <div class="detail-startup-container4">
               <img
                 alt="materialsymbolsautoscheduleoutlinerounded8916"
@@ -138,7 +138,7 @@
               <div class="detail-startup-group29">
                 <span class="detail-startup-text20">Atur Jadwal Meeting</span>
               </div>
-            </div>
+            </div></a>
           </div>
           <div class="detail-startup-group7">
             <img
