--- a/html/paymentpage.html
+++ b/html/paymentpage.html
@@ -1,3 +1,4 @@
+<!--Alvin Kamal Nasich-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -159,7 +160,9 @@
                   >
                 </div>
                 <button class="checkout align-items-center mt-5">
-                  <h2>BAYAR SEKARANG</h2>
+                  <a href="/html/maintenance.html">
+                    <h2>BAYAR SEKARANG</h2>
+                  </a>
                 </button>
               </div>
             </div>
